5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1850_1277.log
== SUBMITION (2019-06-30 22:39:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1=int(input("digite a cidade 1: "))
dc2=int(input("digite a cidade 2: "))
matriz=array([[0,2,11,66,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,14],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]],)
i=int(dc1[0])-1
j=int(dc2[0])-1
h=matriz[i,j]
print(h)
-- EXECUTION TIME:
1.11815
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1850/1277/main.py", line 12, in <module>
    i=int(dc1[0])-1
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:40:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1=int(input("digite a cidade 1: "))
dc2=int(input("digite a cidade 2: "))
matriz=array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]],)
i=int(dc1[0])-1
j=int(dc2[0])-1
h=matriz[i,j]
print(h)
-- EXECUTION TIME:
1.31955
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1850/1277/main.py", line 12, in <module>
    i=int(dc1[0])-1
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:41:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1=int(input("digite a cidade 1: "))
dc2=int(input("digite a cidade 2: "))
matriz=array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]])
i=int(dc1[0])-1
j=int(dc2[0])-1
h=matriz[i,j]
print(h)
-- EXECUTION TIME:
1.284
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1850/1277/main.py", line 12, in <module>
    i=int(dc1[0])-1
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:41:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1=int(input("digite a cidade 1: "))
dc2=int(input("digite a cidade 2: "))
matriz=array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]])
i=int(dc1[0])-1
j=int(dc2[0])-1
h=matriz[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:41:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1=int(input("digite a cidade 1: "))
dc2=int(input("digite a cidade 2: "))
matriz=array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]])
i= int(dc1[0])-1
j= int(dc2[0])-1
h=matriz[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:42:17) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1=int(input("digite a cidade 1: "))
dc2=int(input("digite a cidade 2: "))
matriz=array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]])
i= int(dc1[0]) -1
j= int(dc2[0]) -1
h=matriz[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:42:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1=int(input("digite a cidade 1: "))
dc2=int(input("digite a cidade 2: "))
matriz=array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]])
i= int(dc1[0]) -1
j= int(dc2[0]) -1
h=matriz[i,j]
print(h)
-- EXECUTION TIME:
1.06861
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1850/1277/main.py", line 12, in <module>
    i= int(dc1[0]) -1
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:43:19) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1=int(input("digite a cidade 1: "))
dc2=int(input("digite a cidade 2: "))
matriz=array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]])
i= int (dc1[0]) -1
j= int (dc2[0]) -1
h=matriz[i,j]
print(h)
-- EXECUTION TIME:
0.883791
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1850/1277/main.py", line 12, in <module>
    i= int (dc1[0]) -1
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:43:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1=int(input("digite a cidade 1: "))
dc2=int(input("digite a cidade 2: "))
matriz=array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]])
i= int (dc1[0]) -1
j= int (dc2[0]) -1
h=matriz[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:43:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1=input("digite a cidade 1: "))
dc2=input("digite a cidade 2: "))
matriz=array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]])
i= int (dc1[0]) -1
j= int (dc2[0]) -1
h=matriz[i,j]
print(h)
-- EXECUTION TIME:
0.808331
-- ERROR:
  File "/home/codebench/codes/1850/1277/main.py", line 3
    dc1=input())
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:43:56) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1=input("digite a cidade 1: "))
dc2=input("digite a cidade 2: "))
matriz=array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]])
i= int (dc1[0]) -1
j= int (dc2[0]) -1
h=matriz[i,j]
print(h)
-- ERROR:
File "XXXX", line 3
    dc1=input())
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:44:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1=input("digite a cidade 1: ")
dc2=input("digite a cidade 2: ")
matriz=array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]])
i= int (dc1[0]) -1
j= int (dc2[0]) -1
h=matriz[i,j]
print(h)
-- EXECUTION TIME:
1.14699
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1850/1277/main.py", line 14, in <module>
    h=matriz[i,j]
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:44:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1=input("digite a cidade 1: ")
dc2=input("digite a cidade 2: ")
matriz=array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]])
i= int (dc1[0]) -1
j= int (dc2[0]) -1
h=matriz[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:45:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1=input("digite a cidade 1: ")
dc2=input("digite a cidade 2: ")
matriz=array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]])
i= int (dc1[0]) -1
j= int (dc2[0]) -1
h= matriz[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:45:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1=input("digite a cidade 1: ")
dc2=input("digite a cidade 2: ")
matr=array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]])
i= int (dc1[0]) -1
j= int (dc2[0]) -1
h= matr[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:47:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1 = input("digite a cidade 1: ")
dc2 = input("digite a cidade 2: ")
matr = array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]])
i = int(dc1[0]) -1
j = int(dc2[0]) -1
h = matr[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:48:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input("digite a cidade 1: ")
c2 = input("digite a cidade 2: ")
matr = array([[0,2,11,6,15,11,1],
				 [2,0,7,12,4,2,15],
				 [11,7,0,11,8,3,13],
				 [6,12,11,0,10,2,1],
				 [15,4,8,10,0,5,0,13],
				 [11,2,3,2,5,0,14],
				 [1,15,13,1,13,14,0]])
i = int(c1[0]) - 1
j = int(c2[0]) - 1
h = matr[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:48:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input("digite a cidade 1: ")
c2 = input("digite a cidade 2: ")
matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,0,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
i = int(c1[0]) - 1
j = int(c2[0]) - 1
h = matr[i,j]
print(h)
-- EXECUTION TIME:
0.991953
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1850/1277/main.py", line 14, in <module>
    h = matr[i,j]
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:49:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input("digite a cidade 1: ")
c2 = input("digite a cidade 2: ")
matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
i = int(c1[0]) - 1
j = int(c2[0]) - 1
h = matr[i,j]
print(h)
-- EXECUTION TIME:
1.1445
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
digite a cidade 1: digite a cidade 2: 15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
digite a cidade 1: digite a cidade 2: 13
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:49:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input("digite a cidade 1: ")
c2 = input("digite a cidade 2: ")
matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
i = int(c1[0]) - 1
j = int(c2[0]) - 1
h = matr[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:49:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
c1 = input("digite a cidade 1: ")
c2 = input("digite a cidade 2: ")
matr = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
i = int(c1[0]) - 1
j = int(c2[0]) - 1
h = matr[i,j]
print(h)
-- EXECUTION TIME:
1.24512
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:50:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1 = input("digite a cidade 1: ")
dc2 = input("digite a cidade 2: ")
matriz = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
i = int(dc1[0]) - 1
j = int(dc2[0]) - 1
h = matriz[i,j]
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:50:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1 = input("digite a cidade 1: ")
dc2 = input("digite a cidade 2: ")
matriz = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
i = int(dc1[0]) - 1
j = int(dc2[0]) - 1
h = matriz[i,j]
print(h)
-- EXECUTION TIME:
1.0165
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:50:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1 = input("digite a cidade 1: ")
dc2 = input("digite a cidade 2: ")
matriz = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
i = int(dc1[0]) - 1
j = int(dc2[0]) - 1
h = matriz[i,j
print(h)
-- EXECUTION TIME:
0.863608
-- ERROR:
  File "/home/codebench/codes/1850/1277/main.py", line 15
    print(h)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:50:39) 
-- CODE:
from numpy import *
from numpy.linalg import *
dc1 = input("digite a cidade 1: ")
dc2 = input("digite a cidade 2: ")
matriz = array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])
i = int(dc1[0]) - 1
j = int(dc2[0]) - 1
h = matriz[i,j]
print(h)
-- EXECUTION TIME:
0.89258
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
